# Polyqsim

./: CMakeLists.txt  README.md  environment.yml  temp.mlir
Examples/QBENCH/: dnn_n8.json  grover.json  shor_n5 copy.json  test.json  test.qasm
benchmarking/: benchmark.sh
include/: CMakeLists.txt
include/Polyqsim/: CMakeLists.txt  Passes.h  Passes.td  PolyqsimDialect.h  PolyqsimDialect.td  PolyqsimOps.h  PolyqsimOps.td
include/QASM/: CMakeLists.txt  QASM.h  QASMBase.td  QASMOps.td  QASMTypes.td  temp.td
include/pybridge/: CMakeLists.txt  pybridge.h  python-config.h.in  simplify.py
lib/: CMakeLists.txt
lib/Polyqsim/: CMakeLists.txt  PolyqsimDialect.cpp  PolyqsimOps.cpp
lib/Polyqsim/Passes/: CMakeLists.txt  PolyqsimLowering.cpp
lib/QASM/: CMakeLists.txt  QASMDialect.cpp  QASMOps.cpp  QASMTypes.cpp
lib/pybridge/: CMakeLists.txt  pybridge.cpp
polyqsim-opt/: CMakeLists.txt  polyqsim-opt.cpp
polyqsim-translate/: CMakeLists.txt  polyqsim-translate.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/Polyqsim/: dummy.mlir  foo
test/simplify/: dnn_n8.qasm
tools/Json_to_mlir/: CMakeLists.txt  qasm-json-to-mlir.cpp  temp.cpp
tools/Qasm_to_Json/: freq_calc.py  new_sel.py  serialize.py
